--- a/apps/website/app/scss/components/_hero.scss
+++ b/apps/website/app/scss/components/_hero.scss
@@ -90,7 +90,7 @@
       font-size: 48px;
 
       @include screen-large {
-        font-size: 32px;
+        font-size: 30px;
       }
 
       a {
